[package]
name = "radmin-assets"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tera = ["radmin/tera"]
handlebars = ["radmin/handlebars"]

[dependencies]
termion = "*"
walkdir = "2"
rocket = "*"
sass-rs = "*"
anyhow = "*"
swc_bundler = "*"
swc_common = "*"
swc_ecma_ast = "*"
swc_ecma_codegen = "*"
swc_ecma_parser = "*"
radmin = { path = "../rAdmin" }
